tests/e2e/string_templates_parse_error.error
Error: syntax error in story at line 1, column 8

1|           $ 
             ^

E0041: `$` is not allowed here
